@@ -23,13 +23,13 @@
  * including the main program loop that grabs keypresses and processes them.
  * The screen rendering code is found in interface_draw.ml . *)
 
-open Curses;;
-open Printf;;
-open Interface;;
-open Interface_draw;;
+open Curses
+open Printf
+open Interface
+open Interface_draw
 
 
-exception Interrupt_exception;;
+exception Interrupt_exception
 
 type reminder_type_t = Timed | Untimed
 
@@ -82,65 +82,62 @@ let create_windows screen =
          failwith "Wyrd requires at least an 80 column window.")
    else
       (endwin (); 
-      failwith "Wyrd requires at least a 24 line window.");;
+      failwith "Wyrd requires at least a 24 line window.")
 
 
-(* resize the various windows to fit the new terminal size *)
-(*
-let resize_subwins scr =
-   let height, width = get_size () in
-   if height >= 24 then 
-      if width >= 80 then
-         begin
-            scr.lines <- height;
-            scr.cols <- width;
-            begin match scr.help_win with
-            |None ->
-               scr.help_win <- Some (newwin (height - 2) 40 0 0)
-            |Some win ->
-               assert (wresize win (height - 2) 40);
-            end;
-            scr.hw_lines <- height - 2;
-            scr.hw_cols <- 40;
-            assert (wresize scr.stack_win (height - 2) 40);
-            assert (mvwin scr.stack_win 0 40);
-            scr.sw_lines <- height - 2;
-            scr.sw_cols <- 40;
-            assert (wresize scr.entry_win 2 80);
-            assert (mvwin scr.entry_win (height - 2) 0);
-            scr.ew_lines <- 2;
-            scr.ew_cols <- 80
-         end
-      else if width >= 40 then
-         (* only the stack window is provided *)
-         begin
-            scr.lines <- height;
-            scr.cols <- width;
-            begin match scr.help_win with
-            |None ->
-               ()
-            |Some win ->
-               assert (delwin win);
-               scr.help_win <- None;
-            end;
-            scr.hw_lines <- 0;
-            scr.hw_cols <- 0;
-            assert (wresize scr.stack_win (height - 2) 40);
-            assert (mvwin scr.stack_win 0 0);
-            scr.sw_lines <- height - 2;
-            scr.sw_cols <- 40;
-            assert (wresize scr.entry_win 2 40);
-            assert (mvwin scr.entry_win (height - 2) 0);
-            scr.ew_lines <- 2;
-            scr.ew_cols <- 40
-         end
+(* wresize all the child windows via wresize and mvwin *)
+let resize_subwins iface =
+   let height, width  = get_size () in
+   let cal_height     = 10
+   and cal_width      = 40 in
+   let msg_height     = 5 in
+   let err_height     = 1 in
+   let timed_height   = height - 1 - msg_height - err_height
+   and timed_width    = width - cal_width
+   and untimed_height = height - 1 - msg_height - err_height - cal_height
+   and untimed_width  = cal_width in
+   let new_scr = 
+      if height >= 24 then 
+         if width >= 80 then {
+            stdscr       = iface.scr.stdscr;
+            lines        = height;
+            cols         = width;
+            help_win     = iface.scr.help_win;  (* subwindow pointers are unchanged *)
+            hw_cols      = width;
+            timed_win    = iface.scr.timed_win;
+            tw_lines     = timed_height;
+            tw_cols      = timed_width;
+            calendar_win = iface.scr.calendar_win;
+            cw_lines     = cal_height;
+            cw_cols      = cal_width;
+            untimed_win  = iface.scr.untimed_win;
+            uw_lines     = untimed_height;
+            uw_cols      = untimed_width;
+            msg_win      = iface.scr.msg_win;
+            mw_lines     = msg_height;
+            mw_cols      = width;
+            err_win      = iface.scr.err_win;
+            ew_lines     = err_height;
+            ew_cols      = pred width
+         }
+         else
+            (endwin ();
+            failwith "Wyrd requires at least an 80 column window.")
       else
-         (endwin ();
-         failwith "Orpie requires at least a 40 column window.")
-   else
-      (endwin (); 
-      failwith "Orpie requires at least a 24 line window.");;
- *)
+         (endwin (); 
+         failwith "Wyrd requires at least a 24 line window.")
+   in
+   assert (wresize new_scr.help_win 2 width);
+   assert (wresize new_scr.timed_win (succ timed_height) timed_width);
+   assert (wresize new_scr.calendar_win (succ cal_height) cal_width);
+   assert (mvwin   new_scr.calendar_win 1 timed_width);
+   assert (wresize new_scr.untimed_win (succ untimed_height) untimed_width);
+   assert (mvwin   new_scr.untimed_win (1 + cal_height) timed_width);
+   assert (wresize new_scr.msg_win (succ msg_height) width);
+   assert (mvwin   new_scr.msg_win (1 + timed_height) 0);
+   assert (wresize new_scr.err_win err_height width);
+   assert (mvwin   new_scr.err_win (pred height) 0);
+   new_scr
 
 
 (* refresh the screen *)
@@ -160,17 +157,17 @@ let handle_refresh (iface : interface_state_t) reminders =
    (new_iface, reminders)
    
 
-
-(*
-(* handle a terminal resize *)
-let handle_resize (iface : interface_state_t) =
-   (* reset ncurses *)
+(* handle a curses resize *)
+let handle_resize (iface : interface_state_t) reminders =
    endwin ();
-   assert (refresh ());
-   let rows, cols = get_size () in
-   resize_subwins iface.scr;
-   handle_refresh iface;;
- *)
+   let resized_iface = {
+      iface with scr = resize_subwins iface;
+                 top_untimed = 0;
+                 left_selection = 1;
+                 right_selection = 1;
+   } in
+   handle_refresh resized_iface reminders
+   
 
 (* Any time a new item is selected, the reminders
  * record needs updating and the screen need redrawing *)
@@ -699,14 +696,10 @@ let rec do_main_loop (iface : interface_state_t) reminders last_update =
       draw_msg iface;
       assert (doupdate ());
       let key = wgetch iface.scr.help_win in
-      (* using the ncurses SIGWINCH handler to catch window resize events *)
       let new_iface, new_reminders = 
-         if key = Key.resize then begin
-            (* handle_resize iface *)
-            Printf.fprintf stderr "Error: window resize not handled yet.\n";
-            flush stderr;
-            (iface, reminders)
-         end else
+         if key = Key.resize then
+            handle_resize iface reminders
+         else
             handle_keypress key iface reminders
       in
       let curr_time = Unix.time () in
